Finish about page.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -120,20 +120,15 @@
     transform: translateY(0);
   }
 }
-/* line 11, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 13, ../../resources/assets/sass/arklab/sass/main.scss */
 html, body {
-  font-family: "微軟正黑體", "微软雅黑", Helvetica, Arial, "メイリオ", "맑은 고딕", sans-serif !important;
+  font-family: 'cwTeXHei', sans-serif ,"微軟正黑體", "微软雅黑", Helvetica, Arial, "メイリオ", "맑은 고딕", sans-serif;
   height: 100%;
   width: 100%;
   color: #37474F;
 }
 
 /* line 21, ../../resources/assets/sass/arklab/sass/main.scss */
-* {
-  font-family: 'cwTeXHei', sans-serif;
-}
-
-/* line 25, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeIn {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -153,7 +148,7 @@ html, body {
   animation-name: fadeIn;
 }
 
-/* line 29, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 25, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInDown {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -173,7 +168,7 @@ html, body {
   animation-name: fadeInDown;
 }
 
-/* line 33, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 29, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInRight {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -193,7 +188,7 @@ html, body {
   animation-name: fadeInRight;
 }
 
-/* line 37, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 33, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInFast {
   -webkit-animation-duration: 300ms;
   -moz-animation-duration: 300ms;
@@ -213,7 +208,7 @@ html, body {
   animation-name: fadeIn;
 }
 
-/* line 41, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 37, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInLeft {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -233,7 +228,7 @@ html, body {
   animation-name: fadeInLeft;
 }
 
-/* line 45, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 41, ../../resources/assets/sass/arklab/sass/main.scss */
 .fadeInLeftBig {
   -webkit-animation-duration: 500ms;
   -moz-animation-duration: 500ms;
@@ -253,7 +248,7 @@ html, body {
   animation-name: fadeInLeftBig;
 }
 
-/* line 49, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 45, ../../resources/assets/sass/arklab/sass/main.scss */
 .pageOne {
   height: 100%;
   width: 100%;
@@ -269,7 +264,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 62, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 58, ../../resources/assets/sass/arklab/sass/main.scss */
 .aboutPage {
   height: 100%;
   width: 100%;
@@ -284,7 +279,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 74, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 70, ../../resources/assets/sass/arklab/sass/main.scss */
 .eduPage {
   height: 100%;
   width: 100%;
@@ -299,7 +294,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 86, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 82, ../../resources/assets/sass/arklab/sass/main.scss */
 .productsPage {
   height: 100%;
   width: 100%;
@@ -313,7 +308,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 97, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 93, ../../resources/assets/sass/arklab/sass/main.scss */
 .flyProjectPage {
   height: 100%;
   width: 100%;
@@ -327,7 +322,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 108, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 104, ../../resources/assets/sass/arklab/sass/main.scss */
 .envirnmentPage {
   height: 60%;
   width: 100%;
@@ -341,7 +336,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 119, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 115, ../../resources/assets/sass/arklab/sass/main.scss */
 .documentsPage {
   height: 40%;
   width: 100%;
@@ -355,7 +350,7 @@ html, body {
   background-attachment: scroll;
 }
 
-/* line 130, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 126, ../../resources/assets/sass/arklab/sass/main.scss */
 .page-mask {
   height: 100%;
   width: 100%;
@@ -363,14 +358,14 @@ html, body {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-/* line 137, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 133, ../../resources/assets/sass/arklab/sass/main.scss */
 .unslider-arrow {
   color: #FFFFFF;
   font-size: 48px;
   top: 30%;
 }
 
-/* line 143, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 139, ../../resources/assets/sass/arklab/sass/main.scss */
 .slider {
   height: 60%;
   position: absolute;
@@ -378,7 +373,7 @@ html, body {
   color: white;
 }
 
-/* line 150, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 146, ../../resources/assets/sass/arklab/sass/main.scss */
 .block {
   position: relative;
   top: 60%;
@@ -386,7 +381,7 @@ html, body {
   height: calc(40% - 64px);
 }
 
-/* line 157, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 153, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content {
   height: 100%;
   position: relative;
@@ -394,7 +389,7 @@ html, body {
   overflow: hidden;
   background: black;
 }
-/* line 164, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 160, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content img {
   position: absolute;
   height: 100%;
@@ -411,7 +406,7 @@ html, body {
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
 }
-/* line 184, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 180, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content .title {
   font-size: 18px;
   position: absolute;
@@ -420,14 +415,14 @@ html, body {
   padding: 10px 10px 10px 10px;
 }
 
-/* line 194, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 190, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content .illustration {
   color: white;
   position: absolute;
   visibility: hidden;
 }
 
-/* line 200, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 196, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content:hover .illustration {
   visibility: visible;
   color: white;
@@ -442,28 +437,45 @@ html, body {
   line-height: 150px;
 }
 
-/* line 210, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 206, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content:hover img {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
   opacity: 0.7;
 }
 
-/* line 216, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 212, ../../resources/assets/sass/arklab/sass/main.scss */
 #mark {
   padding-left: 10px;
   padding-top: 10px;
 }
 
-/* line 221, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 217, ../../resources/assets/sass/arklab/sass/main.scss */
 .editButton {
   position: absolute;
   right: 15px;
   bottom: 15px;
 }
 
+/* line 224, ../../resources/assets/sass/arklab/sass/main.scss */
+.beSorted tr {
+  cursor: move !important;
+}
+
+/* line 229, ../../resources/assets/sass/arklab/sass/main.scss */
+.dragged {
+  position: absolute;
+  opacity: 0.5;
+  z-index: 2000;
+}
+
+/* line 235, ../../resources/assets/sass/arklab/sass/main.scss */
+body.dragging, body.dragging * {
+  cursor: move !important;
+}
+
 @media (min-width: 1200px) {
-  /* line 228, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 240, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 1170px;
@@ -474,18 +486,18 @@ html, body {
     left: 50%;
   }
 
-  /* line 238, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 250, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
 
-  /* line 242, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 254, ../../resources/assets/sass/arklab/sass/main.scss */
   .block-content {
     width: 25%;
   }
 }
 @media (min-width: 992px) {
-  /* line 248, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 260, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 970px;
@@ -496,18 +508,18 @@ html, body {
     left: 50%;
   }
 
-  /* line 258, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 270, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
 
-  /* line 262, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 274, ../../resources/assets/sass/arklab/sass/main.scss */
   .block-content {
     width: 25%;
   }
 }
 @media (min-width: 758px) {
-  /* line 268, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 280, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 750px;
@@ -518,18 +530,18 @@ html, body {
     left: 50%;
   }
 
-  /* line 278, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 290, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
 
-  /* line 282, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 294, ../../resources/assets/sass/arklab/sass/main.scss */
   .block-content {
     width: 25%;
   }
 }
 @media (max-width: 768px) {
-  /* line 288, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 300, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 80%;
@@ -540,12 +552,12 @@ html, body {
     left: 50%;
   }
 
-  /* line 298, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 310, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: block;
   }
 
-  /* line 302, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 314, ../../resources/assets/sass/arklab/sass/main.scss */
   .block-content {
     width: 50%;
   }
