--- a/resources/assets/sass/arklab/sass/about.scss
+++ b/resources/assets/sass/arklab/sass/about.scss
@@ -7,12 +7,16 @@
 	font-family: 'cwTeXHei', sans-serif;
 }
 
+ html,body {
+ 	height: 100%;
+ }
+
  #aboutCover {
- 	height: 300px;
+ 	height: calc(90% - 64px);
  	width: 100%;
 
 	position: relative;
-	background: url(/images/about.jpg) no-repeat center center fixed;
+	background: url(http://i.imgur.com/sp4pTUP.jpg) no-repeat center center fixed;
 	@include background-size(cover);
 	color: white;
 
@@ -60,7 +64,7 @@
  }
 
   #envirnmentCover {
- 	height: 300px;
+ 	height: calc(90% - 64px);
  	width: 100%;
 
 	position: relative;
