--- a/public/css/main.css
+++ b/public/css/main.css
@@ -361,13 +361,13 @@ html, body {
 /* line 133, ../../resources/assets/sass/arklab/sass/main.scss */
 .unslider-arrow {
   color: #FFFFFF;
-  font-size: 48px;
+  font-size: 36px;
   top: 30%;
 }
 
 /* line 139, ../../resources/assets/sass/arklab/sass/main.scss */
 .slider {
-  height: 60%;
+  height: 65%;
   position: absolute;
   min-height: 300px;
   color: white;
@@ -376,9 +376,9 @@ html, body {
 /* line 146, ../../resources/assets/sass/arklab/sass/main.scss */
 .block {
   position: relative;
-  top: 60%;
+  top: 65%;
   width: 100%;
-  height: calc(40% - 64px);
+  height: 35%;
 }
 
 /* line 153, ../../resources/assets/sass/arklab/sass/main.scss */
@@ -388,8 +388,11 @@ html, body {
   float: left;
   overflow: hidden;
   background: black;
+  border-width: 1.5px;
+  border-style: solid;
+  border-color: white;
 }
-/* line 160, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 163, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content img {
   position: absolute;
   height: 100%;
@@ -406,7 +409,7 @@ html, body {
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
 }
-/* line 180, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 183, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content .title {
   font-size: 18px;
   position: absolute;
@@ -415,14 +418,14 @@ html, body {
   padding: 10px 10px 10px 10px;
 }
 
-/* line 190, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 193, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content .illustration {
   color: white;
   position: absolute;
   visibility: hidden;
 }
 
-/* line 196, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 199, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content:hover .illustration {
   visibility: visible;
   color: white;
@@ -437,45 +440,45 @@ html, body {
   line-height: 150px;
 }
 
-/* line 206, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 209, ../../resources/assets/sass/arklab/sass/main.scss */
 .block-content:hover img {
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
   opacity: 0.7;
 }
 
-/* line 212, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 215, ../../resources/assets/sass/arklab/sass/main.scss */
 #mark {
   padding-left: 10px;
   padding-top: 10px;
 }
 
-/* line 217, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 220, ../../resources/assets/sass/arklab/sass/main.scss */
 .editButton {
   position: absolute;
   right: 15px;
   bottom: 15px;
 }
 
-/* line 224, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 227, ../../resources/assets/sass/arklab/sass/main.scss */
 .beSorted tr {
   cursor: move !important;
 }
 
-/* line 229, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 232, ../../resources/assets/sass/arklab/sass/main.scss */
 .dragged {
   position: absolute;
   opacity: 0.5;
   z-index: 2000;
 }
 
-/* line 235, ../../resources/assets/sass/arklab/sass/main.scss */
+/* line 238, ../../resources/assets/sass/arklab/sass/main.scss */
 body.dragging, body.dragging * {
   cursor: move !important;
 }
 
 @media (min-width: 1200px) {
-  /* line 240, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 243, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 1170px;
@@ -486,18 +489,18 @@ body.dragging, body.dragging * {
     left: 50%;
   }
 
-  /* line 250, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 253, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
 
-  /* line 254, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 257, ../../resources/assets/sass/arklab/sass/main.scss */
   .block-content {
     width: 25%;
   }
 }
 @media (min-width: 992px) {
-  /* line 260, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 263, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 970px;
@@ -508,18 +511,18 @@ body.dragging, body.dragging * {
     left: 50%;
   }
 
-  /* line 270, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 273, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
 
-  /* line 274, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 277, ../../resources/assets/sass/arklab/sass/main.scss */
   .block-content {
     width: 25%;
   }
 }
 @media (min-width: 758px) {
-  /* line 280, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 283, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 750px;
@@ -530,18 +533,18 @@ body.dragging, body.dragging * {
     left: 50%;
   }
 
-  /* line 290, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 293, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: none;
   }
 
-  /* line 294, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 297, ../../resources/assets/sass/arklab/sass/main.scss */
   .block-content {
     width: 25%;
   }
 }
 @media (max-width: 768px) {
-  /* line 300, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 303, ../../resources/assets/sass/arklab/sass/main.scss */
   .center {
     position: absolute;
     width: 80%;
@@ -552,12 +555,12 @@ body.dragging, body.dragging * {
     left: 50%;
   }
 
-  /* line 310, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 313, ../../resources/assets/sass/arklab/sass/main.scss */
   .mobile br {
     display: block;
   }
 
-  /* line 314, ../../resources/assets/sass/arklab/sass/main.scss */
+  /* line 317, ../../resources/assets/sass/arklab/sass/main.scss */
   .block-content {
     width: 50%;
   }
