--- a/resources/assets/sass/arklab/sass/about.scss
+++ b/resources/assets/sass/arklab/sass/about.scss
@@ -75,6 +75,48 @@ h* {
 
  }
 
+ #plansCover {
+ 	height: 100%;
+ 	width: 100%;
+
+	position: relative;
+	background: #455a64 no-repeat center center fixed;
+	@include background-size(cover);
+	color: white;
+
+	background: rgba(75,121,161,1);
+	background: -moz-linear-gradient(-45deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
+	background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(75,121,161,1)), color-stop(100%, rgba(40,62,81,1)));
+	background: -webkit-linear-gradient(-45deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
+	background: -o-linear-gradient(-45deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
+	background: -ms-linear-gradient(-45deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
+	background: linear-gradient(135deg, rgba(75,121,161,1) 0%, rgba(40,62,81,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b79a1', endColorstr='#283e51', GradientType=1 );
+
+	min-height: 720px;
+
+	background-attachment: scroll;
+
+	.progress {
+		background-color: #ef9a9a;
+		.determinate {
+			background-color: #d32f2f
+		}
+	}
+}
+#lassCover {
+	height: 100%;
+ 	width: 100%;
+
+	position: relative;
+	background: url(http://i.imgur.com/9vrY7iF.jpg) no-repeat center center fixed;
+	@include background-size(cover);
+	color: white;
+
+	background-attachment: scroll;
+	min-height: 627px;
+}
+
  #calendar {
  	background-color: #283593;
  	height: 100%;
@@ -83,7 +125,7 @@ h* {
 	position: relative;
 	color: white;
 	margin: 0 0 0 0;
-	padding: 70px 10px 10px 10px;
+	padding: 10px 10px 10px 10px;
 
 	min-height: 800px;
 
@@ -163,4 +205,8 @@ h* {
 
  .container {
  	color: #455A64;
+ }
+
+ .collapsible-body {
+ 	background-color: white;
  }
