--- a/resources/assets/sass/arklab/sass/about.scss
+++ b/resources/assets/sass/arklab/sass/about.scss
@@ -40,9 +40,49 @@ h* {
 	background-attachment: scroll;
  }
 
- #contacts {
+ #ark90Cover {
  	height: 100%;
  	width: 100%;
+
+	position: relative;
+	background: rgba(40,48,72,1);
+	background: -moz-linear-gradient(top, rgba(40,48,72,1) 0%, rgba(133,147,152,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(40,48,72,1)), color-stop(100%, rgba(133,147,152,1)));
+	background: -webkit-linear-gradient(top, rgba(40,48,72,1) 0%, rgba(133,147,152,1) 100%);
+	background: -o-linear-gradient(top, rgba(40,48,72,1) 0%, rgba(133,147,152,1) 100%);
+	background: -ms-linear-gradient(top, rgba(40,48,72,1) 0%, rgba(133,147,152,1) 100%);
+	background: linear-gradient(to bottom, rgba(40,48,72,1) 0%, rgba(133,147,152,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#283048', endColorstr='#859398', GradientType=0 );
+
+	@include background-size(cover);
+	color: white;
+
+	background-attachment: scroll;
+	.container {
+		color: #fafafa;
+	}
+
+	h3 {
+		background: -webkit-linear-gradient(#ece9e6, #ffffff);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
+ }
+
+ #ark90Details {
+ 	//height: 70%;
+ 	width: 100%;
+ 	position: relative;
+ 	.container {
+ 		margin-top: 50px;
+ 		margin-bottom: 50px;
+ 	}
+ }
+
+ #contacts {
+ 	width: 100%;
+
+	padding: 20px 20px 20px 20px;
 
 	position: relative;
 	background: url(http://i.imgur.com/sp4pTUP.jpg) no-repeat center center fixed;
@@ -59,6 +99,46 @@ h* {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f69001', endColorstr='#f92073', GradientType=1 );
 
 	background-attachment: scroll;
+
+	.container {
+		color: white;
+	}
+
+	a {
+		color: #01579b;
+	}
+
+	font-size: 18px;
+
+	hr {
+	    display: block;
+	    height: 1px;
+	    border: 0;
+	    border-top: 1px solid #cfd8dc;
+	    margin: 1em 0;
+	    padding: 0; 
+	}
+ }
+
+ #arkEduCover {
+	height: 90%;
+ 	width: 100%;
+
+	position: relative;
+	background: url(/images/P1080643.JPG) no-repeat center center fixed;
+	@include background-size(cover);
+	color: white;
+
+	background-attachment: scroll;
+	min-height: 627px;
+
+	.container {
+		color: white;
+	}
+
+	.page-mask {
+		background-color: rgba(0, 0, 0, 0.4)
+	}
  }
 
  #eduCover {
@@ -153,16 +233,24 @@ h* {
  }
 
  #flyProjectCover {
- 	height: 300px;
+ 	height: 100%;
  	width: 100%;
 
 	position: relative;
-	background: url(/images/fly.jpg) no-repeat center center fixed;
+	background: url(http://i.imgur.com/aMpp1TD.jpg) no-repeat center center fixed;
 	@include background-size(cover);
 	color: white;
 
 	background-attachment: scroll;
+	min-height: 627px;
 
+	.page-mask {
+		background-color: rgba(0, 0, 0, 0.4)
+	}
+
+	.container {
+		color: white;
+	}
  }
 
   #envirnmentCover {
